# rustympkglib

./: .gitignore  .gitmodules  Cargo.toml  README.md  build.rs  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: clippy.yml  test.yml
src/: helpers.rs  lib.rs  pkgbuild.rs  pkgdata.rs
