[package]
name = "rustympkglib"
version = "0.1.0"
authors = ["Sighery"]
edition = "2018"
license = "MIT"
description = "Library for dealing with Arch Linux's PKGBUILD and makepkg"
repository = "https://github.com/Sighery/rustympkglib"
readme = "README.md"
keywords = ["arch-linux", "PKGBUILD", "makepkg", "arch-build-system"]
categories = ["parser-implementations"]
build = "build.rs"

[dependencies]
tree-sitter = "0.16"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
cc = "1.0"
