[package]
name = "rustympkglib"
version = "0.1.0"
authors = ["Sighery"]
edition = "2018"
license = "MIT"
description = "Library for dealing with Arch Linux's PKGBUILD and makepkg"
repository = "https://github.com/Sighery/rustympkglib"
readme = "README.md"
keywords = ["arch-linux", "PKGBUILD", "makepkg", "arch-build-system"]
categories = ["parser-implementations"]

[dependencies]
tree-sitter = "0.19"
tree-sitter-bash = "0.19"
serde = { version = "1.0", features = ["derive"] }
